--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
-spring.datasource.initialization-mode=EMBEDDED
+
+
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/beer_service
+spring.datasource.username=root
+spring.datasource.password=777g
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.show-sql= true
