Adding ehcache and cache to list beers - closes #22

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-core</artifactId>
+            <version>2.3.0.1</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/javax.xml/jaxb-impl -->
@@ -131,6 +132,22 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <!-- Use ehcache and cache to reload fast inventory disabled by conection (server port)  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.cache</groupId>
+            <artifactId>cache-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
         </dependency>
 
     </dependencies>
