--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+#Inventory Service
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
 
-
+#DATABASE CONFIGURATION
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -9,3 +10,6 @@ spring.datasource.username=root
 spring.datasource.password=777g
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql= true
+
+#Cache Configuration
+spring.cache.jcache.config=classpath:ehcache.xml
