--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 #Inventory Service
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
-
-#DATABASE CONFIGURATION
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/beer_service
-spring.datasource.username=root
-spring.datasource.password=777g
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.show-sql= true
-
-#Cache Configuration
+spring.datasource.initialization-mode=embedded
 spring.cache.jcache.config=classpath:ehcache.xml
+
+##DATABASE CONFIGURATION
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.database=mysql
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/beer_service
+#spring.datasource.username=root
+#spring.datasource.password=777g
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql= true
+#
+##Cache Configuration
+#spring.cache.jcache.config=classpath:ehcache.xml
