--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
 spring.datasource.initialization-mode=embedded
 spring.cache.jcache.config=classpath:ehcache.xml
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+
+#defaults for this docker image = vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
 
 ##DATABASE CONFIGURATION
 #spring.jpa.defer-datasource-initialization=true
