Adding Listeners . Closes #33

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,14 @@
-#Inventory Service
-
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
-spring.datasource.initialization-mode=embedded
+spring.datasource.initialization-mode=EMBEDDED
 spring.cache.jcache.config=classpath:ehcache.xml
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
-
-#defaults for this docker image = vromero/activemq-artemis
-
+spring.h2.console.enabled=true
+# defaults for this docker image - vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-##DATABASE CONFIGURATION
-#spring.jpa.defer-datasource-initialization=true
-#spring.jpa.database=mysql
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/beer_service
-#spring.datasource.username=root
-#spring.datasource.password=777g
-#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-#spring.jpa.show-sql= true
-#
-##Cache Configuration
-#spring.cache.jcache.config=classpath:ehcache.xml
+
+
+spring.data.jpa.repositories.bootstrap-mode=default
+
+logging.level.guru.springframework=debug
